--- a/public/style.css
+++ b/public/style.css
@@ -3,14 +3,29 @@ html {
 	color: var(--color);
 }
 
+a {
+	color: inherit;
+}
+
 html, body {
 	background-color: #222;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	margin: 0;
 	text-align: center;
 }
 
-a {
-	color: inherit;
+body {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	min-height: 100vh;
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	justify-content: space-between;
 }
 
 footer {
@@ -19,23 +34,19 @@ footer {
 
 #matrix {
 	-webkit-user-select: none;
+	aspect-ratio: 1/4;
+	cursor: pointer;
+	display: grid;
+	flex-grow: 1;
+	gap: 1px;
+	grid-template-columns: repeat(8, 1fr);
+	grid-template-rows: repeat(32, 1fr);
 	margin: 0.5rem auto;
+	place-items: stretch;
 	touch-action: none;
 	user-select: none;
 }
 
-.row {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-
-.row div {
-	height: 2.3vh;
-	width: 2.3vh;
-
+#matrix div {
 	background-color: black;
-	cursor: pointer;
-	margin: 1px;
 }
