--- a/public/style.css
+++ b/public/style.css
@@ -18,7 +18,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	min-height: 100vh;
+	min-height: 100dvh;
 }
 
 main {
@@ -41,7 +41,7 @@ footer {
 	gap: 1px;
 	grid-template-columns: repeat(8, 1fr);
 	grid-template-rows: repeat(32, 1fr);
-	height: 70vh;
+	height: 70%;
 	margin: 0.5rem auto;
 	place-items: stretch;
 	touch-action: none;
