--- a/public/style.css
+++ b/public/style.css
@@ -9,7 +9,7 @@ a {
 
 html, body {
 	background-color: #222;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+	font-family: system-ui, -apple-system, sans-serif;
 	margin: 0;
 	text-align: center;
 }
